# rrt_project

./: .gitignore  CMakeLists.txt  CMakeLists_ros.txt  Dockerfile  Dockerfile-1.0  Dockerfile-2.0  README.md  deg2quat_can_be_deleted.ipynb  deg_to_quaternion.py  package.xml
.devcontainer/: Dockerfile  devcontainer.json
.old/.old_launch/: local_map_test.launch  marker_launch.launch
.old/.old_scripts/: cluster_service.py  differential_robot_route.py
.old/.old_src/: robots.cpp
.old_include/: grid_map.hpp  rrt_simple_source.hpp
.old_launch/: debug_potential.launch  full_amcl.launch  rrt_potential_launch.launch  teste_robot_points.launch
.old_nodes/: mapping.cpp
.old_src/: colors_RGB  main_rrt_star.cpp  rrt_test.cpp  test_quad_tree.cpp  tests.ipynb
Include/: QTree.hpp  grid_map.hpp  robots.hpp  rrt_star.hpp
analysis/: analizyng_obstacle_avoidance_node.ipynb
config/: limo_local_rrt.yaml  limo_rrt.yaml  local_rrt.yaml  professor_felipe.rviz  rrt.yaml  rrt_star.yaml
config/differential_robots/: pioneer.yaml  pioneer_simulation.yaml  solver_bot.yaml
config/obstacle_avoidance/: obstacle_avoidance_scan_node.yaml  obstacle_avoidance_scan_node_simulation.yaml
config/simulation/: rrt.yaml  rrt_star.yaml
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
include/header_lib/: QTree.hpp  rrt.hpp  rrt_simple_ptr.hpp  rrt_simple_source.hpp
include/rrt_project/: QTree.hpp  QTree_ptr.hpp  potential.hpp  rrt.hpp  rrt_star.hpp  rrt_star_new.hpp
launch/: debug_revised_local_rrt.launch  differenttial_control_plot.launch  discretized_rectangle.launch  full.launch  full_optitrack.launch  full_simulation.launch  gmapping_igor.launch  gmapping_room_test.launch  launch_local_rrt.launch  launch_rviz_rosbag.launch  launch_test.launch  obstacle_avoidance_plot.launch  obstacle_avoidance_test.launch  professor_felipe.launch  revised_local_rrt.launch  robot_and_map_setup.launch  rosbag.launch  rrt_launch.launch  rrt_potential_launch.launch  rviz_limo_urdf.launch  rviz_local_map.launch  rviz_obstacle_avoidance.launch  simulation_local_map_test.launch  test.launch
launch/experiment/: amcl_optitrack_calibration.launch  limo_rrt_project.launch  limo_rrt_project_omni.launch  rrt_project.launch  rrt_star_project.launch
launch/launches_for_dissertation/: dynamic_pioneer_full_map.launch
launch/mapping/: gmapping_room_test.launch  mapping_igor.launch  mapping_room.launch  mapping_simulation.launch
launch/simulation/: limo_and_map.launch  limo_description.launch  only_rviz.launch  robot_and_map_setup.launch  robot_and_map_setup_old.launch  rrt_project_simulation.launch  rrt_project_simulation_setup.launch  rrt_project_simulation_setup_old.launch  rrt_star_project_simulation.launch  rrt_star_project_simulation_setup.launch  simple_rrt_simulation_potential.launch
maps/: frames.gv
maps/limo_map_latest/: map.pgm
maps/limo_map_latest_2/: map.pgm  map.yaml
maps/map_2_for_dissertation/: map.pgm
maps/map_3_for_dissertation/: map.pgm  map.yaml
maps/map_for_dissertation/: map.pgm  map.yaml
maps/new_odom_map_latest/: map.pgm
maps/optitrack_map/: optitrack_map.pgm  optitrack_map.yaml
maps/real_map/: real_map.pgm  real_map.yaml
maps/real_map2/: real_map.pgm  real_map.yaml
maps/square_map/: map.pgm  map.yaml
nodes/: differential_control.cpp  differential_control_plot.cpp  discretized_rectangle.cpp  global_rrt.cpp  global_rrt_star.cpp  local_map.cpp  local_map_lidar.cpp  local_map_new.cpp  local_rrt.cpp  local_rrt_draft_tried.cpp  local_rrt_nanoflan_draft.cpp  merge_local_map.cpp  merge_local_maps.cpp  merge_local_maps_plot.cpp  merged_map.cpp  minimal_local_rrt.cpp  obstacle_avoidance.cpp  obstacle_avoidance_old.cpp  obstacle_avoidance_plot.cpp  omni_control.cpp  optitrack_gazebo_bridge.cpp  rrt_path.cpp  test_refactor.cpp
rviz/: mapping.rviz  mapping_real_world.rviz  potential_wall_test.rviz  professor_felipe.rviz  real_world.rviz  rrt_project.rviz  rrt_project_simulation.rviz
scripts/: analizyng_obstacle_avoidance.py  circle_path.py  cluster_service.py  differential_robot_control.py  differential_robot_control_path.py  differential_robot_control_path_extended.py  differential_robot_control_path_omni.py  differential_robot_control_path_omni_dynamic.py  differential_robot_control_path_pioneer.py  emergency_button.py  line_path.py  map_server.py  marker_test.py  new_obstacle_avoidance_test.py  obstacle_avoidance_node.py  path_generation_potential_wall_test.py  professor_felipe_main.py  professor_felipe_publish_path.py  publish_gazebo_positions.py  publish_robot_traveled_path.py  test_scan.py  teste.ipynb  teste_x_obs.ipynb  transformation_plot_rviz.py
scripts/aurora_py/: differential_robot_controller.py  drones.py  kalman_filter.py  obstacle_avoidance_2d.py
scripts/paths_for_dissertation/: path_for_pioneer_full_map.py  path_for_pioneer_short_passage.py  path_for_pioneer_zig_zag.py
scripts/scrips_used_colect_data_for_results/: potential_arrows.py
simulation/: local_rrt.yaml
simulation_config/: local_rrt.yaml  rrt.yaml
simulation_config/obstacle_avoidance/: obstacle_avoidance_scan_node.yaml
src/: KdTree.cpp  drawline_test.cpp  image_transformation.cpp  main_rrt_star.cpp  potential.cpp  rrt.cpp  rrt_kynematics.cpp  rrt_simple_map.cpp  rrt_star.cpp  rrt_star_new.cpp  rrt_test.cpp  second_main.cpp  simple_map_test.cpp  test_quad_tree.cpp  test_rrt_ptr.cpp
src/nodes/: global_rrt.cpp  local_map.cpp  local_rrt.cpp  mapping.cpp  robot_points.cpp  rrt_node.cpp  rrt_path.cpp  rrt_path_service.cpp  rrt_star_path.cpp  teste.cpp  velocity_calculator_node.cpp
srv/: ClusterObstacles.srv  PlanPath.srv
test/: hierarchical_clustering.cpp
worlds/SALA_LIMO/: model.config  model.sdf
worlds/SHORT_PASSAGE/: model.sdf
worlds/ZIGZAG/: model.config  model.sdf
worlds/obstacles/: model.sdf
worlds/obstacles_new/: model.config  model.sdf
worlds/short_passage_limo/: model.config  model.sdf
worlds/simple_map/: README.md  model.sdf
worlds/simple_map_big/: model.config  model.sdf
worlds/zigzag_limo/: model.sdf  (+1 more)
(+69 files in other folders)
